# AutoClaude

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
docs/superpowers/plans/: 2026-07-09-auto-continue-loop.md
docs/superpowers/specs/: 2026-07-09-auto-continue-loop-design.md
hooks/: README.md  autoclaude-loop.js  autoclaude-loop.test.js  install-hook.js
hooks/lib/: broadcast.js  broadcast.test.js  config.js  config.test.js  decide.js  decide.test.js  paths.js  state.js  state.test.js
src/: app.h  config.cpp  config.h  main.cpp
src/core/: state_machine.cpp  state_machine.h
src/ipc/: ac_paths.h  status_pipe.cpp  status_pipe.h
src/monitor/: event_parser.cpp  event_parser.h  transcript_watcher.cpp  transcript_watcher.h
src/power/: power_action.cpp  power_action.h
src/ui/: drawing.cpp  drawing.h  window.cpp  window.h
